--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon dist/server.js",
-    "start": "node ./dist/server.js"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
